fix(system monitor): wrap logs in an observer and increase maximum amount

--- a/packages/client/src/views/system/systemMonitor/index.module.scss
+++ b/packages/client/src/views/system/systemMonitor/index.module.scss
@@ -20,11 +20,6 @@
   padding-top: 1rem;
 }
 
-.log {
-  max-height: 100%;
-  height: 100%;
-}
-
 .right {
   display: flex;
   flex-direction: column;
